fix: prevent choice-dropdown and copy-button from overlapping incorrectly (#146) (#147)

--- a/src/code-blocks/components/Pre.css
+++ b/src/code-blocks/components/Pre.css
@@ -17,7 +17,6 @@ pre {
     position: absolute !important;
     top: 10px;
     right: 10px;
-    z-index: 3;
     margin: 0;
     height: 25px;
     width: 30px;
